--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -26,6 +26,12 @@
   moreinfo_text: More info
   moreinfo_external: Y
 
+- title: "Mountain water resources under climate change: A comprehensive highland-lowland assessment"
+  subtitle: Elaboration of new perspectives on mountains in the context of global water resources
+  years: 2011
+  where: Imperial College, London, UK
+  funding: Swiss National Science Foundation (SNSF)
+
 - title: Residual flow values in the Landquart, Hinterrhein and Vorderrhein Rivers, Grisons, CH
   subtitle: Process-oriented hydrological modelling with consideration of hydropower use
   years: 2010–2011
