--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -5,9 +5,12 @@
   journal: Nature Sustainability
   volume: published online
   doi: 10.1038/s41893-020-0559-9
-  link: https://dx.doi.org/10.5061/dryad.ns1rn8pnt
-  link_text: Access associated data
+  link: https://rdcu.be/b5r2H
+  link_text: Access article online
   link_external: Y
+  link2: https://dx.doi.org/10.5061/dryad.ns1rn8pnt
+  link2_text: Access associated data
+  link2_external: Y
 
 - authors: Immerzeel WW, Lutz AF, Andrade M, Bahl A, Biemans H, Bolch T, Hyde S, Brumby S, Davies BJ, Elmore AC, Emmer A, Feng M, Fernández A, Haritashya U, Kargel, JS, Koppes M, Kraaijenbrink PDA, Kulkarni AV, Mayewski P, Nepal S, Pacheco P, Painter TH, Pellicciotti F, Rajaram H, Rupper S, Sinisalo A, Shrestha AB, Viviroli D, Wada Y, Xiao C, Yao T, Baillie JEM
   year: 2020
