--- a/_data/publications_datasets.yml
+++ b/_data/publications_datasets.yml
@@ -3,3 +3,4 @@
   title: "Data from: Increasing dependence of lowland populations on mountain water resources"
   repository: Dryad Digital Repository
   doi: 10.5061/dryad.ns1rn8pnt
+  new: Y
