--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -1,7 +1,7 @@
 - title: Flood events from continuous simulation in the context of dam safety
   subtitle: Development of statistical methods for evaluating long-term hydrometeorological simulation results
   where: University of Zurich
-  funding: Swiss Federal Office of Energy (SFOE)§Swiss Federal Office for the Environment (FOEN)
+  funding: Swiss Federal Office of Energy (SFOE)
 
 - title: Flood hazards and risk trends along the Aare River under a changing climate
   subtitle: Study within the pilot programme on climate change adaptation in Switzerland
