--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -17,7 +17,7 @@
   where: University of Zurich
   collaboration: Swiss Federal Institute for Forest, Snow and Landscape Research (WSL), Birmensdorf§Swiss Federal Institute of Technology, Zurich (ETHZ)§Universities of Bern, Fribourg, Geneva and Lausanne
   funding: Swiss Federal Office for the Environment (FOEN)
-  moreinfo_link: "https://www.bafu.admin.ch/bafu/en/home/topics/water/info-specialists/state-of-waterbodies/state-of-watercourses/water-flow-and-flow-regime-in-watercourses/climate-change-and-hydrology/hydro-ch2018.html"
+  moreinfo_link: "https://www.nccs.admin.ch/nccs/de/home/das-nccs/themenschwerpunkte/hydro-ch2018.html"
   moreinfo_text: More info
   moreinfo_external: Y
 
