--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -9,8 +9,12 @@
   link_text: Free access to article online
   link_external: Y
   link2: https://dx.doi.org/10.5061/dryad.ns1rn8pnt
-  link2_text: Free access to associated data
+  link2_text: Free access to resulting data
   link2_external: Y
+  notes: "Featured as research highlight in *Nature*"
+  notes_highlight: Y
+  notes_link: https://www.nature.com/articles/d41586-020-02028-7
+  notes_link_external: Y
   new: Y
 
 - authors: Immerzeel WW, Lutz AF, Andrade M, Bahl A, Biemans H, Bolch T, Hyde S, Brumby S, Davies BJ, Elmore AC, Emmer A, Feng M, Fernández A, Haritashya U, Kargel, JS, Koppes M, Kraaijenbrink PDA, Kulkarni AV, Mayewski P, Nepal S, Pacheco P, Painter TH, Pellicciotti F, Rajaram H, Rupper S, Sinisalo A, Shrestha AB, Viviroli D, Wada Y, Xiao C, Yao T, Baillie JEM
