projects minor changes

--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -9,7 +9,7 @@
   collaboration: Geotest AG§Hunziker, Zarn & Partner AG
   funding: Swiss Federal Office for the Environment (FOEN)§Cantons of Aargau, Bern and Solothurn
   moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/klima/fachinformationen/anpassung-an-den-klimawandel/pilotprogramm-anpassung-an-den-klimawandel.html"
-  moreinfo_text: More info
+  moreinfo_text: Read more
   moreinfo_external: Y
 
 - title: Hydrological basis for climate change adaptation measures (Hydro-CH2018)
@@ -18,7 +18,7 @@
   collaboration: Swiss Federal Institute for Forest, Snow and Landscape Research (WSL), Birmensdorf§Swiss Federal Institute of Technology, Zurich (ETHZ)§Universities of Bern, Fribourg, Geneva and Lausanne
   funding: Swiss Federal Office for the Environment (FOEN)
   moreinfo_link: "https://www.nccs.admin.ch/nccs/de/home/das-nccs/themenschwerpunkte/hydro-ch2018.html"
-  moreinfo_text: More info
+  moreinfo_text: Read more
   moreinfo_external: Y
 
 - title: Understanding extreme flood events in the Aare River (EXAR)
@@ -27,5 +27,5 @@
   collaboration: Geotest AG§Hunziker, Zarn & Partner AG§IUB Engineering AG§Paul Scherrer Institute (PSI), Villigen§Swedish Environmental Research Institute (IVL), Stockholm, SWE§Swiss Federal Institute for Forest, Snow and Landscape Research (WSL), Birmensdorf§Swiss Federal Institute of Technology, Lausanne (EPFL)§Swiss Federal Institute of Technology, Zurich (ETHZ)§University of Bern§University of Grenoble, F
   funding: Swiss Federal Office for the Environment (FOEN)§Swiss Federal Nuclear Safety Inspectorate (ENSI)§Swiss Federal Office of Energy (SFOE)§Swiss Federal Office for Civil Protection (FOCP)§Swiss Federal Office of Meteorology and Climatology (MeteoSwiss)
   moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/dossiers/grossprojekte-hochwasserschutz/gefahrengrundlagen-fuer-extremhochwasser-an-aare-und-rhein--exar.html"
-  moreinfo_text: More info
+  moreinfo_text: Read more
   moreinfo_external: Y
