--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -23,7 +23,7 @@
   where: belop gmbh, Sarnen
   funding: Numerous companies, municipalities and cantons in Switzerland§Swiss Federal Railways (SBB)§Swiss Federal Roads Office (FEDRO)
   moreinfo_link: "https://www.belop.ch/referenzen/naturgefahren-wasserbau"
-  moreinfo_text: More info
+  moreinfo_text: Read more
   moreinfo_external: Y
 
 - title: "Mountain water resources under climate change: A comprehensive highland-lowland assessment"
@@ -46,7 +46,7 @@
   collaboration: Swiss Federal Institute for Forest, Snow and Landscape Research (WSL), Birmendsdorf§Swiss Federal Institute of Technology, Zurich (ETHZ)§University of Zurich
   funding: Swiss Federal Office for the Environment (FOEN)
   moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/wasser/publikationen-studien/publikationen-wasser/auswirkungen-klimaaenderung-wasserressourcen-gewaesser.html"
-  moreinfo_text: More info
+  moreinfo_text: Read more
   moreinfo_external: Y
 
 - title: Climate change and water resources management in mountain areas
@@ -62,7 +62,7 @@
   where: University of Bern
   funding: Swiss Federal Office for the Environment (FOEN)
   moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/wasser/zustand/wasser--methoden/grundlagen-zur-hochwasserabschaetzung-in-mesoskaligen-einzugsgeb.html"
-  moreinfo_text: More info
+  moreinfo_text: Read more
   moreinfo_external: Y
   moreinfo2_link: "http://www.hydrologie.unibe.ch/PREVAHregHQ/home.html"
   moreinfo2_text: Download data
@@ -82,7 +82,7 @@
   collaboration: Swiss Federal Office of Meteorology and Climatology (MeteoSwiss)
   funding: Swiss Federal Office for the Environment (FOEN)
   moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/publikationen-studien/publikationen/ereignisanalyse-hochwasser-2005-analyse-von-prozessen-massnahmen-und-gefahrengrundlagen.html"
-  moreinfo_text: More info
+  moreinfo_text: Read more
   moreinfo_external: Y
 
 - title: Worst-Case scenarios for the Sihl River, Zürich
