--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -11,6 +11,9 @@
   link2: https://dx.doi.org/10.5061/dryad.ns1rn8pnt
   link2_text: Free access to resulting data
   link2_external: Y
+  link3: https://www.media.uzh.ch/en/Press-Releases/2020/Water-from-Mountains.html
+  link3_text: Press release at University of Zurich
+  link3_external: Y
   notes: "Featured as research highlight in *Nature*"
   notes_highlight: Y
   notes_link: https://www.nature.com/articles/d41586-020-02028-7
