--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -3,7 +3,8 @@
   year: 2020
   title: "Increasing dependence of lowland populations on mountain water resources"
   journal: Nature Sustainability
-  volume: published online
+  volume: 3
+  pages: 917–928
   doi: 10.1038/s41893-020-0559-9
   link: https://rdcu.be/b5r2H
   link_text: Free access to article online
