--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -1,3 +1,9 @@
+- title: Extreme floods in Switzerland
+  subtitle: Hydrometeorological scenarios across a wide range of scales and return periods for all of Switzerland
+  where: University of Zurich
+  collaboration: University of Bern§Universtiy of Graz, AUT§University of Grenoble, F
+  funding: Swiss Federal Office for the Environment (FOEN)§Swiss Federal Office of Energy (SFOE)
+
 - title: Flood events from continuous simulation in the context of dam safety
   subtitle: Development of statistical methods for evaluating long-term hydrometeorological simulation results
   where: University of Zurich
@@ -8,7 +14,7 @@
   where: University of Zurich
   collaboration: Geotest AG§Hunziker, Zarn & Partner AG
   funding: Swiss Federal Office for the Environment (FOEN)§Cantons of Aargau, Bern and Solothurn
-  moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/klima/fachinformationen/anpassung-an-den-klimawandel/pilotprogramm-anpassung-an-den-klimawandel.html"
+  moreinfo_link: "https://www.nccs.admin.ch/nccs/de/home/massnahmen/pak/projektephase2/pilotprojekte-zur-anpassung-an-den-klimawandel--cluster--managem/c-02-hochwasserabschaetzung-entlang-der-aare.html"
   moreinfo_text: Read more
   moreinfo_external: Y
 
