--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -7,6 +7,7 @@
 - title: Flood events from continuous simulation in the context of dam safety
   subtitle: Development of statistical methods for evaluating long-term hydrometeorological simulation results
   where: University of Zurich
+  collaboration:  Department of Mathematics, University of Zurich
   funding: Swiss Federal Office of Energy (SFOE)
 
 - title: Flood hazards and risk trends along the Aare River under a changing climate
