--- a/_data/publications_book-chapters.yml
+++ b/_data/publications_book-chapters.yml
@@ -1,3 +1,17 @@
+- authors: Martius O, Viviroli D, Rössler O, Zischg A, Röthlisberger V, Aemisegger F, Schulte L, Stuber M, Pena JC, Ruiz-Villanueva V, Molnar P
+  year: 2020
+  title: Understanding flood triggering mechanisms and flood risk changes
+  editors: Ruiz-Villanueva V, Molnar P, eds
+  booktitle: Past, current, and future changes in floods in Switzerland. Hydro-CH2018 project
+  publisher: Commissioned by the Federal Office for the Environment (FOEN)
+  place: Bern
+  doi: 10.3929/ethz-b-000462775
+  pages: 38–50
+  pdf: https://doi.org/10.3929/ethz-b-000462775
+  pdf_openaccess: Y
+  pdf_external: Y
+  new: Y
+
 - authors: "Hock R, Rasul G, Adler C, Cáceres B, Gruber S, Hirabayashi Y, Jackson M, Kääb A, Kang S, Kutuzov S, Milner A, Molau U, Morin S, Orlove B, Steltzer H, Allen S, Arenson L, Baneerjee S, Barr I, Bórquez R, Brown L, Cao B, Carey M, Cogley G, Fischlin A, de Sherbinin A, Eckert N, Geertsema M, Hagenstad M, Honsberg M, Hood E, Huss M, Jimenez Zamora E, Kotlarski S, Lefeuvre PM, López Moreno JI, Lundquist J, McDowell G, Mills S, Mou C, Nepal S, Noetzli J, Palazzi E, Pepin N, Rixen C, Shahgedanova M, Skiles SM, Vincent C, Viviroli D, Weyhenmeyer G, Sherpa PY, Weyer N, Wouters B, Yasunari TJ, You Q, Zhang Y"
   year: 2019
   title: High Mountain Areas
