--- a/_data/publications_authored-monographs.yml
+++ b/_data/publications_authored-monographs.yml
@@ -42,6 +42,7 @@
   publisher: Geographisches Institut der Universität Bern
   place: Bern
   isbn: 978-3-90583500-7
+  pdf: /documents/Viviroli_2007_G77.pdf
   notes: "Awarded with the University of Bern faculty prize for best dissertation in Geosciences 2007"
   notes_highlight: Y
 
