--- a/_data/publications_conference-proceedings.yml
+++ b/_data/publications_conference-proceedings.yml
@@ -1,7 +1,10 @@
 - authors: Meyer P, Viviroli D, Melian CJ
   year: 2016
   title: Valuating the impact of multiple hydropower plants on biodiversity in river dendritic networks
+  editors: Sauvage S, Sánchez-Pérez JM, Rizzoli AE
   booktitle: Proceedings of the 8th International Congress on Environmental Modelling and Software (iEMSs), 10–14 July 2016, Toulouse, F
+  publisher: International Environmental Modelling and Software Society (iEMSs)
+  place: Manno
   isbn: 978-889035745-9
 
 - authors: Brunner MI, Vannier O, Favre AC, Viviroli D, Meylan P, Sikorska AE, Seibert J
