--- a/_data/publications_papers-further.yml
+++ b/_data/publications_papers-further.yml
@@ -27,6 +27,7 @@
   volume: 102
   issue: 3
   pages: 238–248
+  pdf: documents/Zappa_et_al_2010_wel_102.pdf
 
 - authors: Viviroli D, Dürr HH, Messerli B, Meybeck, M, Weingartner R
   year: 2008
@@ -43,6 +44,7 @@
   volume: 100
   issue: 2
   pages: 125–130
+  pdf: documents/Viviroli_et_al_2008_wel_100.pdf
 
 - authors: Weingartner R, Viviroli D
   year: 2007
@@ -79,6 +81,7 @@
   journal: Ciencias
   volume: 72
   pages: 4–13
+  pdf: documents/Messerli_et_al_2003_Ciencias_72.pdf
 
 - authors: Viviroli D, Weingartner R
   year: 2002
