--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -37,7 +37,7 @@
   year: 2020
   title: Hydrologic model calibration with uncertain discharge data
   journal: Hydrological Sciences Journal
-  volume: in press
+  volume: published online
   doi: 10.1080/02626667.2020.1735638
   pdf: /documents/Westerberg_et_al_2020_HSJ.pdf
 
