--- a/_data/publications_book-chapters.yml
+++ b/_data/publications_book-chapters.yml
@@ -1,14 +1,13 @@
-- authors: Martius O, Viviroli D, Rössler O, Zischg A, Röthlisberger V, Aemisegger F, Schulte L, Stuber M, Pena JC, Ruiz-Villanueva V, Molnar P
+- authors: Martius O, Viviroli D, Rössler O, Zischg A, Röthlisberger V, Aemisegger F, Schulte L, Stuber M, Peña JC, Ruiz-Villanueva V, Molnar P
   year: 2020
   title: Understanding flood triggering mechanisms and flood risk changes
   editors: Ruiz-Villanueva V, Molnar P, eds
   booktitle: Past, current, and future changes in floods in Switzerland. Hydro-CH2018 project
   publisher: Commissioned by the Federal Office for the Environment (FOEN)
   place: Bern
-  doi: 10.3929/ethz-b-000462775
+  chapterdoi: 10.3929/ethz-b-000462775
   pages: 38–50
   pdf: https://doi.org/10.3929/ethz-b-000462775
-  pdf_openaccess: Y
   pdf_external: Y
   new: Y
 
@@ -19,6 +18,7 @@
   booktitle: IPCC Special Report on the Ocean and Cryosphere in a Changing Climate (SROCC)
   publisher: Intergovernmental Panel on Climate Change (IPCC)
   place: Geneva
+  pages: 131–202
   pdf: https://report.ipcc.ch/srocc/pdf/SROCC_FinalDraft_Chapter2.pdf
   pdf_text: Download chapter pdf
   pdf_external: Y
@@ -61,28 +61,30 @@
   place: Berlin
   isbn: 978-3-540-88274-9
   pages: 17–58
+  pdf: /documents/Wehren_et_al_2010_HandbEnvironChem_6.pdf
 
 - authors: Barben M, Hänggi P, Viviroli D
   year: 2010
   title: Wasserhaushalt ausgewählter mittelgrosser Einzugsgebiete 1961–2007 [Bilan hydrologique d’un choix de bassins versants de taille moyenne, 1961–2007 / Bilancio idrologico di prescelti bacini imbriferi di media grandezza 1961–2007 / Water Balance in Selected Medium-Sized Catchments 1961–2007]
-  series: Hydrologischer Atlas der Schweiz
-  volume: 6.5
-  publisher: Bundesamt für Umwelt
+  series: Hydrologischer Atlas der Schweiz (HADES)
+  publisher: Bundesamt für Umwelt (BAFU)
   place: Bern
   isbn: 978-3-95202620-5
   pdf: https://hydrologischeratlas.ch/produkte/druckausgabe/wasserhaushalt/tafel-6-5
+  tafel: 6.5
   pdf_text: Download pdf and data
   pdf_external: Y
 
-- authors: Viviroli D, Messerli B, Schädler B, Weingartner R
+- authors: Viviroli D, Buytaert W, Messerli B, Schädler B, Schreier H, Weingartner R
   year: 2009
-  title: Water towers in a changing world. Mountain waters, a key resource for development
+  title: Mountain Waters
   editors: Kohler T, Maselli D, eds
   booktitle: Mountains and Climate Change – From Understanding to Action. Contribution to the 15th World Climate Conference in Copenhagen, DK (COP15)
   publisher: Swiss Agency for Development and Cooperation (SDC)
   place: Bern
   isbn: 978-3-905835-16-8
-  pages: 12–16
+  pages: 10–19
+  pdf: documents/Viviroli_et_al_2009_COP15_2.pdf
 
 - authors: Schwanbeck J, Viviroli D, Weingartner R, Frei C, Schumann A
   year: 2008
@@ -91,7 +93,7 @@
   booktitle: Ereignisanalyse Hochwasser 2005. Teil 2 – Analyse von Prozessen, Massnahmen und Gefahrengrundlagen
   series: Umwelt-Wissen
   volume: 08-25
-  publisher: Bundesamt für Umwelt
+  publisher: Bundesamt für Umwelt (BAFU)
   place: Bern
   pages: 48–58
   pdf: https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/publikationen-studien/publikationen/ereignisanalyse-hochwasser-2005-analyse-von-prozessen-massnahmen-und-gefahrengrundlagen.html
@@ -100,11 +102,11 @@
 - authors: Viviroli D, Weingartner R
   year: 2004
   title: Hydrologische Bedeutung des europäischen Alpenraumes [Importance hydrologique de la région alpine européenne / L'importanza idrologica della regione alpina europea / The Hydrological Significance of the European Alps]
-  series: Hydrologischer Atlas der Schweiz
-  volume: 6.4
-  publisher: Bundesamt für Umwelt
+  series: Hydrologischer Atlas der Schweiz (HADES)
+  publisher: Bundesamt für Umwelt (BAFU)
   place: Bern
   isbn: 978-3-95202620-5
+  tafel: 6.4
   pdf: https://hydrologischeratlas.ch/produkte/druckausgabe/wasserhaushalt/tafel-6-4
   pdf_text: Download pdf and data
   pdf_external: Y
