--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -1,6 +1,6 @@
 - title: Natural runoff in the Glenner River 1930–2013 and impacts of hydropower use
   subtitle: Process-oriented hydrological modelling with consideration of hydropower use
-  years: 2014
+  years: 2014–2016
   where: belop gmbh, Sarnen
   funding: World Wide Fund for Nature (WWF)
 
