--- a/_data/projects_current.yml
+++ b/_data/projects_current.yml
@@ -1,7 +1,7 @@
 - title: Extreme floods in Switzerland
   subtitle: Hydrometeorological scenarios across a wide range of scales and return periods for all of Switzerland
   where: University of Zurich
-  collaboration: University of Bern§Universtiy of Graz, AUT§University of Grenoble, F
+  collaboration: University of Bern§Universtiy of Graz, AT§University of Grenoble, FR
   funding: Swiss Federal Office for the Environment (FOEN)§Swiss Federal Office of Energy (SFOE)
 
 - title: Flood events from continuous simulation in the context of dam safety
@@ -31,7 +31,7 @@
 - title: Understanding extreme flood events in the Aare River (EXAR)
   subtitle: Analyses based on comprehensive meteorological, hydrological and hydraulic modelling
   where: University of Zurich
-  collaboration: Geotest AG§Hunziker, Zarn & Partner AG§IUB Engineering AG§Paul Scherrer Institute (PSI), Villigen§Swedish Environmental Research Institute (IVL), Stockholm, SWE§Swiss Federal Institute for Forest, Snow and Landscape Research (WSL), Birmensdorf§Swiss Federal Institute of Technology, Lausanne (EPFL)§Swiss Federal Institute of Technology, Zurich (ETHZ)§University of Bern§University of Grenoble, F
+  collaboration: Geotest AG§Hunziker, Zarn & Partner AG§IUB Engineering AG§Paul Scherrer Institute (PSI), Villigen§Swedish Environmental Research Institute (IVL), Stockholm, SE§Swiss Federal Institute for Forest, Snow and Landscape Research (WSL), Birmensdorf§Swiss Federal Institute of Technology, Lausanne (EPFL)§Swiss Federal Institute of Technology, Zurich (ETHZ)§University of Bern§University of Grenoble, FR
   funding: Swiss Federal Office for the Environment (FOEN)§Swiss Federal Nuclear Safety Inspectorate (ENSI)§Swiss Federal Office of Energy (SFOE)§Swiss Federal Office for Civil Protection (FOCP)§Swiss Federal Office of Meteorology and Climatology (MeteoSwiss)
   moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/dossiers/grossprojekte-hochwasserschutz/gefahrengrundlagen-fuer-extremhochwasser-an-aare-und-rhein--exar.html"
   moreinfo_text: Read more
