--- a/_data/publications_book-chapters.yml
+++ b/_data/publications_book-chapters.yml
@@ -61,6 +61,7 @@
   place: Berlin
   isbn: 978-3-540-88274-9
   pages: 17–58
+  chapterdoi: 10.1007/978-3-540-88275-6_2
   pdf: /documents/Wehren_et_al_2010_HandbEnvironChem_6.pdf
 
 - authors: Barben M, Hänggi P, Viviroli D
