--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -345,6 +345,7 @@
   journal: AMBIO Special Report
   volume: S13
   pages: 29–34
+  doi: 10.1007/0044-7447-33.sp13.29
   pdf: /documents/Messerli_et_al_2004_AMBIO_SR_13.pdf
 
 - authors: Viviroli D, Weingartner R, Messerli B
