--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -8,7 +8,7 @@
   subtitle: Synthetic Design Hydrograph approach, aimed at practical application in consulting and engineering
   years: 2013–2018
   where: belop gmbh, Sarnen§University of Zurich
-  collaboration: AIC Ingénieurs Conseils SA, Lausanne§University of Grenoble (F)
+  collaboration: AIC Ingénieurs Conseils SA, Lausanne§University of Grenoble, FR
   funding: Swiss Federal Office for the Environment (FOEN)
 
 - title: Mountain torrent and runoff channel hydraulics
@@ -53,7 +53,7 @@
   subtitle: Conception, organisation and moderation of an international invited workshop in Göschenen, CH
   years: 2009–2011
   where: University of Bern
-  collaboration: Changjiang Water Resources Commission, Wuhan, PRC§Federal Ministry of Agriculture, Forestry, Environment and Water Management, Vienna, AUT§Imperial College, London, UK§International Research Society INTERPRAEVENT, Klagenfurt, AUT§JBA Consulting, Skipton, North Yorkshire, UK§National Institute of Water and Atmospheric Research (NIWA), Christchurch, NZ§Newcastle University, UK§Provincial Government of Carinthia, Klagenfurt, AUT§Spanish Research Council (CSIC), Zaragoza, ESP§Tel-Hai Academic College, ISR§University at Albany, NY, USA§University of British Columbia, CDN§University of KwaZulu-Natal, Pietermaritzburg, ZA§University of Washington, Seattle, WA, USA
+  collaboration: Changjiang Water Resources Commission, Wuhan, CN§Federal Ministry of Agriculture, Forestry, Environment and Water Management, Vienna, AT§Imperial College, London, UK§International Research Society INTERPRAEVENT, Klagenfurt, AT§JBA Consulting, Skipton, North Yorkshire, UK§National Institute of Water and Atmospheric Research (NIWA), Christchurch, NZ§Newcastle University, UK§Provincial Government of Carinthia, Klagenfurt, AT§Spanish Research Council (CSIC), Zaragoza, ES§Tel-Hai Academic College, IL§University at Albany, NY, US§University of British Columbia, CA§University of KwaZulu-Natal, Pietermaritzburg, ZA§University of Washington, Seattle, WA, US
   funding: Mountain Research Initiative (MRI)§Swiss National Science Foundation (SNSF)
 
 - title: New foundations for flood estimation in Switzerland
@@ -103,7 +103,7 @@
   subtitle: Initiation of work on global mountain water resources assessments
   years: 2005–2007
   where: University of Bern
-  collaboration: Sorbonne University, Paris, F§Utrecht University, NL
+  collaboration: Sorbonne University, Paris, FR§Utrecht University, NL
   funding: Association of Intermediate Staff, University of Bern (MVUB)
 
 - title: Process-based flood estimation for ungauged mesoscale catchments in Switzerland
