--- a/_data/publications_datasets.yml
+++ b/_data/publications_datasets.yml
@@ -4,3 +4,9 @@
   repository: Dryad Digital Repository
   doi: 10.5061/dryad.ns1rn8pnt
   new: Y
+
+- authors: Immerzeel WW, Lutz AF, Andrade M, Bahl A, Biemans H, Bolch T, Hyde S, Brumby S, Davies BJ, Elmore AC, Emmer A, Feng M, Fernández A, Haritashya U, Kargel, JS, Koppes M, Kraaijenbrink PDA, Kulkarni AV, Mayewski P, Nepal S, Pacheco P, Painter TH, Pellicciotti F, Rajaram H, Rupper S, Sinisalo A, Shrestha AB, Viviroli D, Wada Y, Xiao C, Yao T, Baillie JEM
+  year: 2019
+  title: "Supplementary data to: Importance and vulnerability of the world's water towers"
+  repository: Zenodo Digital Repository
+  doi: 10.5281/zenodo.3521932
