--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -1,3 +1,13 @@
+- title: Understanding extreme flood events in the Aare River (EXAR)
+  subtitle: Analyses based on comprehensive meteorological, hydrological and hydraulic modelling
+  years: 2016–2021
+  where: University of Zurich
+  collaboration: Geotest AG§Hunziker, Zarn & Partner AG§IUB Engineering AG§Paul Scherrer Institute (PSI), Villigen§Swedish Environmental Research Institute (IVL), Stockholm, SE§Swiss Federal Institute for Forest, Snow and Landscape Research (WSL), Birmensdorf§Swiss Federal Institute of Technology, Lausanne (EPFL)§Swiss Federal Institute of Technology, Zurich (ETHZ)§University of Bern§University of Grenoble, FR
+  funding: Swiss Federal Office for the Environment (FOEN)§Swiss Federal Nuclear Safety Inspectorate (ENSI)§Swiss Federal Office of Energy (SFOE)§Swiss Federal Office for Civil Protection (FOCP)§Swiss Federal Office of Meteorology and Climatology (MeteoSwiss)
+  moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/mitteilungen.msg-id-82397.html"
+  moreinfo_text: Read more
+  moreinfo_external: Y
+
 - title: Natural runoff in the Glenner River 1930–2013 and impacts of hydropower use
   subtitle: Process-oriented hydrological modelling with consideration of hydropower use
   years: 2014–2016
