--- a/_data/publications_project-reports.yml
+++ b/_data/publications_project-reports.yml
@@ -1,14 +1,23 @@
+- authors: Staudinger M, Viviroli D, eds
+  year: 2020
+  title: Hydrometeorologische Grundlagen
+  report: Detailbericht A Projekt EXAR (Extremhochwasser an der Aare)
+  institution: Geographisches Institut der Universität Zürich
+  pdf: https://www.wsl.ch/exar
+  pdf_external: Y
+  new: Y
+
 - authors: Favre AC, Vannier O, Seibert J, Sikorska AE, Viviroli D, Meylan P
   year: 2015
   title: Statistical estimation of flood volumes
   report: Phase I report for the Federal Office for the Environment (FOEN)
-  institution: Engineering school in Energy, Water and Environment, University of Grenoble; Department of Geography, University of Zürich, Zürich; belop gmbh, Sarnen; AIC Ingénieurs Conseils SA, Lausanne
+  institution: Engineering school in Energy, Water and Environment, University of Grenoble; Department of Geography, University of Zürich; belop gmbh, Sarnen; AIC Ingénieurs Conseils SA, Lausanne
 
 - authors: Meyer R, Schädler B, Viviroli D, Weingartner R
   year: 2011
   title:  Klimaänderung und Niedrigwasser. Auswirkungen der Klimaänderung auf die Niedrigwasserverhältnisse im Schweizer Mittelland für 2021–2050 und 2070–2099
   report: Schlussbericht CCHydro – Modul 4
-  institution: Geographisches Institut der Universität Bern, Bern
+  institution: Geographisches Institut der Universität Bern
   pdf: "https://www.bafu.admin.ch/dam/bafu/de/dokumente/hydrologie/externe-studien-berichte/klimaaenderung-und-niedrigwasser.pdf.download.pdf/Klima%C3%A4nderung%20und%20Niedrigwasser.pdf"
   pdf_external: Y
   link: "https://www.bafu.admin.ch/bafu/de/home/themen/wasser/publikationen-studien/publikationen-wasser/auswirkungen-klimaaenderung-wasserressourcen-gewaesser.html"
@@ -19,7 +28,7 @@
   year: 2011
   title: Klimaänderung und Wasserhaushalt in sensitiven Bilanzierungsgebieten
   report: Schlussbericht CCHydro – Modul 3
-  institution: Geographisches Institut der Universität Bern, Bern
+  institution: Geographisches Institut der Universität Bern
   pdf: "https://www.bafu.admin.ch/dam/bafu/de/dokumente/hydrologie/externe-studien-berichte/klimaaenderung-und-wasserhaushalt-in-sensitiven-bilanzierungsgebieten.pdf.download.pdf/Klima%C3%A4nderung%20und%20Wasserhaushalt%20in%20sensitiven%20Bilanzierungsgebieten.pdf"
   pdf_external: Y
   link: "https://www.bafu.admin.ch/bafu/de/home/themen/wasser/publikationen-studien/publikationen-wasser/auswirkungen-klimaaenderung-wasserressourcen-gewaesser.html"
@@ -30,12 +39,12 @@
   year: 2007
   title: Prozessbasierte Abschätzung von Extremhochwassern im Einzugsgebiet der Sihl
   report: Projektschlussbericht im Auftrag des Amtes für Abfall, Wasser, Energie und Luft des Kantons Zürich (AWEL)
-  institution: Geographisches Institut der Universität Bern, Bern; TK Consult AG, Zürich
+  institution: Geographisches Institut der Universität Bern; TK Consult AG, Zürich
 
 - authors: Baur M, Dettli R, Weingartner R, Viviroli D, Imhof P, Fässler M, Gerhardinger H
   year: 2006
   title: Potenzialanalyse Kleinwasserkraftwerke. Kraftwerke an Fliessgewässern
   report: Schlussbericht zu einer Studie im Auftrag des Bundesamtes für Energie (BfE), Programm Kleinwasserkraft
-  institution:  econcept AG, Zürich; Geographisches Institut der Universität Bern, Bern
+  institution:  econcept AG, Zürich; Geographisches Institut der Universität Bern
   pdf: "https://www.zora.uzh.ch/id/eprint/112001/1/e_wwa_wkr_restwasser/bve_wwa_wkr_restwasser_dokumentat"
   pdf_external: Y
