further content updates

--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -7,6 +7,7 @@
   moreinfo_link: "https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/mitteilungen.msg-id-82397.html"
   moreinfo_text: Read more
   moreinfo_external: Y
+  new: Y
 
 - title: Natural runoff in the Glenner River 1930–2013 and impacts of hydropower use
   subtitle: Process-oriented hydrological modelling with consideration of hydropower use
