--- a/_data/publications_book-chapters.yml
+++ b/_data/publications_book-chapters.yml
@@ -1,3 +1,15 @@
+- authors: Seibert J, Jenicek M, Huss N, Ewen T, Viviroli D
+  year: 2021
+  title: Snow and Ice in the Hydrosphere
+  editors: Haeberli W, Whiteman C
+  booktitle: Snow and Ice-Related Hazards, Risks, and Disasters (Second Edition)
+  publisher: Elsevier
+  isbn: 978-0-12-817129-5
+  chapterdoi: 10.1016/B978-0-12-817129-5.00010-X
+  place: Amsterdam
+  pages: 93–135
+  new: Y
+
 - editors: Andres N, Steeb N, Badoux A, Hegg C, eds
   authorship: Contributions to
   year: 2021
