--- a/_data/publications_project-reports.yml
+++ b/_data/publications_project-reports.yml
@@ -1,3 +1,12 @@
+- authors: Staudinger M, Furrer R, Viviroli D
+  year: 2021
+  title: Hochwasserereignisse aus kontinuierlicher Langzeitsimulation zur Überprüfung der Sicherheit der Stauanlagen
+  report: Projektschlussbericht im Auftrag des Bundesamts für Energie (BFE)
+  institution: Geographisches Institut der Universität Zürich
+  pdf: https://pubdb.bfe.admin.ch/de/publication/download/10451
+  pdf_external: Y
+  new: Y
+
 - authors: Staudinger M, Viviroli D, eds
   year: 2020
   title: Hydrometeorologische Grundlagen
