--- a/_data/publications_papers-further.yml
+++ b/_data/publications_papers-further.yml
@@ -8,6 +8,7 @@
   link_text: Access article online
   link_external: Y
   pdf: /documents/Viviroli_2019_TT_250.pdf
+  mediacoveragelist: media_2019TT
 
 - authors: Köplin N, Viviroli D, Schädler B, Weingartner R
   year: 2010
