--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -12,13 +12,11 @@
   link2: https://dx.doi.org/10.5061/dryad.ns1rn8pnt
   link2_text: Free access to resulting data
   link2_external: Y
-  link3: https://www.media.uzh.ch/en/Press-Releases/2020/Water-from-Mountains.html
-  link3_text: Press release at University of Zurich
-  link3_external: Y
   notes: "Featured as research highlight in *Nature*"
   notes_highlight: Y
   notes_link: https://www.nature.com/articles/d41586-020-02028-7
   notes_link_external: Y
+  mediacoveragelist: media_2020NatSus
   new: Y
 
 - authors: Immerzeel WW, Lutz AF, Andrade M, Bahl A, Biemans H, Bolch T, Hyde S, Brumby S, Davies BJ, Elmore AC, Emmer A, Feng M, Fernández A, Haritashya U, Kargel, JS, Koppes M, Kraaijenbrink PDA, Kulkarni AV, Mayewski P, Nepal S, Pacheco P, Painter TH, Pellicciotti F, Rajaram H, Rupper S, Sinisalo A, Shrestha AB, Viviroli D, Wada Y, Xiao C, Yao T, Baillie JEM
@@ -149,6 +147,7 @@
   pdf_external: Y
   notes: "Featured as one of the journal's 25 'Highlights of 2015'"
   notes_highlight: Y
+  #mediacoveragelist: media_2015ERL
 
 - authors: Sikorska AE, Viviroli D, Seibert J
   year: 2015
@@ -306,6 +305,7 @@
   pdf: https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2006WR005653
   pdf_openaccess: Y
   pdf_external: Y
+  #mediacoveragelist: media_2007WRR
 
 - authors: Weingartner R, Viviroli D, Schädler B
   year: 2007
